# fixell

./: .gitignore  Dockerfile.client  Dockerfile.server  Makefile  README.md  TODO.md  docker-compose.yml  fixer-curl.sh  fixer-server.py  fixer-server.sh  fixer.sh  index.html  pyproject.toml
docs/: README.md  api.md  installation.md  introduction.md  models.md  security.md  troubleshooting.md  usage.md
fixell/: __init__.py  client.py  server.py  utils.py
logs/: conversation_127_0_0_1_20251213.md
tests/: test_e2e.py  test_unit.py
